/*
 * This is Steward's Strategy Provider API for the AaveV2StablecoinCellar.sol Cellar contract which can be found in this repo:
 * https://github.com/PeggyJV/cellar-contracts
 *
 */

syntax = "proto3";
package steward.v1;

option go_package = "/steward_proto";

/*
 * Represents a function call to the Aave V2 Stablecoin cellar
 */
message AaveV2Stablecoin {
    // The function you wish to execute on the target cellar
    oneof function {
        // Represents function `accruePlatformFees()`
        AccrueFees accrue_fees = 1;
        // Represents function `claimAndUnstake()`
        ClaimAndUnstake claim_and_unstake = 2;
        // Represents function `enterPosition()`
        EnterPosition enter_position = 3;
        // Represents function `rebalance(address newLendingToken, uint256 minNewLendingTokenAmount)`
        Rebalance rebalance = 4;
        // Represents function `reinvest(uint256 minAssetsOut)`
        Reinvest reinvest = 5;
        // Represents function `setDepositLimit(uint256 limit)`
        SetDepositLimit set_deposit_limit = 6;
        // Represents function `setLiquidityLimit(uint256 limit)`
        SetLiquidityLimit set_liquidity_limit = 7;
        // Represents function `transferFees()`
        TransferFees transfer_fees = 8;
    }

    /*
     * Take platform fees and performance fees off of cellar's active assets.
     *
     * Represents function `accruePlatformFees()`
     */
    message AccrueFees {}

    /*
     * Claim rewards from Aave and begin cooldown period to unstake them.
     *
     * Represents function `claimAndUnstake()`
     */
    message ClaimAndUnstake {}

    /*
     * Enters inactive assets into the current Aave stablecoin position.
     *
     * Represents function `enterPosition()`
     */
    message EnterPosition {}

    /*
     * Rebalances current assets into a new asset position.
     *
     * Represents function `rebalance(address newLendingToken, uint256 minNewLendingTokenAmount)`
     *
     * This function is based on the Curve Pool Registry exchange_multiple() function:
     * https://github.com/curvefi/curve-pool-registry/blob/16a8664952cf61d7fed06acca79ad5ac696f4b20/contracts/Swaps.vy#L461-L489
     */
    message Rebalance {
        // An array of up to 9 addresses (4 swaps) representing a token swap route, where each triplet of addresses is a single swap route (ex. in token address, pool address, out token address)
        repeated string route = 1;
        // An array of up to 4 swap params. Attempting more than four swaps will fail.
        repeated SwapParams swap_params = 2;
        // Minimum acceptable assets to be received from the swap (slippage parameter).  Must be parsible as an unsigned 256-bit integer.
        string min_assets_out = 3;

        /*
         * Represents parameters for a single swap. Each swap needs the indeces in Rebalance.route of the in/out token addresses and the swap type. See the Curve contract linked above for more detail.
         */
        message SwapParams {
            // Index in the `route` array of the swap's input token address
            uint64 in_index = 1;
            // Index in the `route` array of the swap's output token address
            uint64 out_index = 2;
            /* 1 - stableswap `exchange`
             * 2 - stableswap `exchange_underlying`
             * 3 - cryptoswap `exchange`
             * 4 - cryptoswap `exchange_underlying`
             * 5 - Polygon factory metapools `exchange_underlying`
             * See the Curve Pool Registry exchange_multiple() function for more information.
             */
            uint64 swap_type = 3;
        }
    }

    /*
     * Reinvest rewards back into cellar's current position. Must be called within 2 day unstake period 10 days after `claimAndUnstake` was run.
     *
     * Represents function `reinvest(uint256 minAssetsOut)`
     */
    message Reinvest {
        // Minimum acceptable assets to be received from the swap (slippage parameter).  Must be parsible as an unsigned 256-bit integer.
        string min_assets_out = 1;
    }

    /*
     * Sets the per-wallet deposit limit. Careful to use the same decimals as the current asset.
     *
     * Represents function `setDepositLimit(uint256 limit)`
     */
    message SetDepositLimit {
        // The per-wallet deposit limit amount. Must be parsible as an unsigned 256-bit integer.
        string limit = 1;
    }

    /*
     * Sets the maximum liquidity that cellar can manage. Careful to use the same decimals as the current asset.
     *
     * Represents function `setLiquidityLimit(uint256 limit)`
     */
     message SetLiquidityLimit {
        // The maximum allowed liquidity amount. Must be parsible as an unsigned 256-bit integer.
        string limit = 1;
    }

    /*
     * Transfer accrued fees to the Sommelier Chain to distribute.
     *
     * Represents function `transferFees()`
     */
    message TransferFees {}
}
